@@ -1,0 +1,8 @@
+
+all: args
+
+args: args.c
+
+clean:
+	rm -f args
+
