@@ -13,5 +13,15 @@ many script that help(ed) build the releases:
 - match_linux_ea
 - make_cygwin_dist
 
-a helper program to translate documentation to DOS format
+a helper program to translate documentation to DOS/Windows text format
 - todos.c
+
+a helper program to list argument passed to a given command
+- Args/args.c
+This one was used on dar-support mailing-list to troubleshoot
+arguments passed to dar from a user defined script
+
+a helper script to get the date past N dates
+- date_past_N_days
+and can be used as dar -c <backup> -af -A `date_past_N_days 3` ...
+this will only save file that have changed in the last 3 days
